# Application-PPE

./: CMakeLists.txt  LogicTracking.txt  PPE_Standard_Pi5.hevc  PPE_Standard_Pi5.mkv  debug_output.txt  imagelist.txt  metadata.yaml  mot_results.txt  new_pruning_log  original-log  pruning-log  quantize_model.sh  run.sh  run_rtsp.txt  setup.sh  update_model_config.sh
include/: asm_kernels.h  common.h  inference_engine.h  input_pipeline.h  neon_preprocess.h  video_writer.h
models/: Makefile  check_ncnn.cpp  simple_check
models/PPE_model/: khiem.int8.param  model-opt.param  model.int8.param  model.ncnn.param  model.table  model2.ncnn.param  model3.ncnn.param
models/benchmarkYolov8n/: FP16model.ncnn.param  FP32-PRUN36-model.ncnn.param  pruning34.param
models/best_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
models/kaggle/working/best_ncnn_model/: metadata.yaml
models/yolov8n_ncnn_model/: model_ncnn.py
newbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: .main.cpp.swo  asm_kernels.S  asm_kernels_fallback.cpp  inference_engine.cpp  input_pipeline.cpp  main.cpp  main_app.cpp  main_benchmark.cpp  main_old.cpp  neon_preprocess.cpp
src/bytetrack/: BYTETracker.cpp
src/ocsort/: KalmanBoxTracker.cpp  OCSort.cpp
train/: _annotations.coco.json
